2013-01-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Bugfix and more proposal for use.

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Additional informations about direction
          of the jumps.

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: "Public variables" -> "Public labels"

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved handling of blocks and
	  lists of labels and variables.

2013-01-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Expanded assembly mode and nicer tables.

2013-01-15 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libsdcc/long/modulong.c:
	  return ~0UL instead of looping endlessly on divide-by-0,
	  addresses #3600983

2013-01-13 Raphael Neider <rneider AT web.de>

	* src/pic14/gen.c (genDataPointerSet): 
	  fix and simplify operand size detection, fixes #3600361
	* src/pic14/main.c (keywords[]):
	  remove unsupported "pdata", fixes #3600724

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Canceled the command option: --create-sfr16
	* device/non-free/include/pic16/pic18*.h,
	  device/non-free/lib/pic16/libdev/pic18*.c: Canceled the __sfr16 type.

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --assembly-source

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: New command option: --create-sfr16
	  (This option is for the time being operates only at the pic16 series.)
	* device/non-free/include/pic16/pic18*.h,
	  device/non-free/lib/pic16/libdev/pic18*.c: Implementation of the __sfr16 type.

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --no-explanations
